<resources>
    <string name="app_name">EPifi</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Login Fragment</string>
    <string name="s">S.</string>
    <string name="heading">First of the few steps to set you up with a Bank Account</string>
    <string name="pan_number">PAN NUMBER</string>
    <string name="birthdate">BIRTHDATE</string>
    <string name="bottomhead">Providing PAN &amp; Date of Birth helps us find and fetch your KYC from a central registry by the Government of India.<font color='#8a2be2'> Learn more</font></string>
    <string name="next">NEXT</string>

</resources>