<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignInFragment"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/midLayout"

      >
    <TextView
        android:id="@+id/toptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:text="@string/s"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:textColor="@color/orange"/>

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toptext"


        android:text="@string/heading"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:textColor="@color/black"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/midLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:id="@+id/pantext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="12sp"
            android:typeface="normal"
            android:text="@string/pan_number"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/pancard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_edittext"
            android:textColorHint="#70ffffff"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:maxLength="10"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pantext"/>

        <TextView
            android:id="@+id/birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/pancard"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="12sp"
            android:typeface="normal"
            android:text="@string/birthdate"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            />
        <EditText
            android:id="@+id/date"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_edittext1"
            android:textColorHint="#70ffffff"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:maxLength="2"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/birthdate"
            app:layout_constraintRight_toLeftOf="@id/month"/>
        <EditText
            android:id="@+id/month"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_edittext1"
            android:textColorHint="#70ffffff"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:maxLength="2"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            app:layout_constraintLeft_toRightOf="@id/date"
            app:layout_constraintRight_toLeftOf="@id/year"
            app:layout_constraintTop_toBottomOf="@id/birthdate"/>
        <EditText
            android:id="@+id/year"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_edittext1"
            android:textColorHint="#70ffffff"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:maxLength="4"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/pancard"
            app:layout_constraintTop_toBottomOf="@id/birthdate"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/midLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <TextView
            android:id="@+id/bottomheading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/bottomhead"
            android:textSize="12sp"

            android:typeface="normal"
            android:textColor="@color/black_80"/>
        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:text="@string/next"
            android:textSize="20sp"
            android:padding="8dp"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@id/bottomheading"/>
        <TextView
            android:id="@+id/idont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/next"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="I don\'t have a PAN"
            android:textSize="15sp"
            android:gravity="center"

            android:typeface="normal"
            android:layout_marginTop="10dp"

            android:textColor="@color/purple"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>